Refactor : Exception Handler [Not done]

--- a/SHS.csproj
+++ b/SHS.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp5.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,5 +24,6 @@
     <PackageReference Include="NPOI" Version="2.5.4" />
     <PackageReference Include="Npoi.Mapper" Version="3.5.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
   </ItemGroup>
 </Project>
