--- a/SHS.csproj
+++ b/SHS.csproj
@@ -22,8 +22,8 @@
     <PackageReference Include="MySql.Data" Version="8.0.26" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="NPOI" Version="2.5.4" />
-    <PackageReference Include="Npoi.Mapper" Version="3.5.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.1" />
   </ItemGroup>
 </Project>
